Added Cache Templates